src/styles/SignIn.css
.sign-in-container {
  display: flex;
  position: absolute;
  justify-content: space-around;
  align-items: center;
  left: 0;
  right: 0;
  margin: auto;
  padding: 50px;
}

.sign-in-container>.row {
  gap: 50px;
}

.form-container {
  display: flex;
  justify-content: center;
  padding: 20px;
  background-color: white;
  color: #414141;
  border-radius: 11px;
  text-align: center;
  box-shadow: 0 0 5px rgba(0, 0, 0, 0.250);
  min-width: 350px;
}

.form-container h3 {
  font-weight: 600;
  font-size: 30px;
}

.sign-in-button {
  background-color: rgb(71, 255, 156);
  color: white;
  margin: 15px 0px 30px;
  padding: 10px;
  width: 200px;
  font-weight: 600;
  transition: 0.5s;
}

.sign-in-button:hover {
  opacity: 80%;
}

.input-area {
  text-align: left;
  margin: 20px;
}

.input-area label {
  font-size: 13px;
  display: block;
}

.input-area input {
  height: 32px;
  width: 300px;
  border-radius: 4px;
  border: 1px solid #414141;
}

.page-header {
  display: flex;
  flex-direction: column;
  text-align: center;
  min-width: 450px;
}

.sign-in-icons {
  display: flex;
  justify-content: center;
  margin-top: 20px;
  gap: 75px;
}

.icon-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  position: relative;
}

.icon-container > label {
  position: absolute;
  top: 75px;
}

.down-arrow {
  width: 50px;
}

.sign-in-icon {
  width: 75px;
}

